--- a/force-app/main/default/lwc/loginForm/loginForm.css
+++ b/force-app/main/default/lwc/loginForm/loginForm.css
@@ -10,7 +10,6 @@
   left: 15%;
   height: 450px;
   width: 400px;
-
   background: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
 }
@@ -30,26 +29,28 @@ img {
 }
 
 .input-icon {
-  margin: 0.9rem 0.7rem;
+  margin: 0.4rem 0.7rem;
 }
 
 .input-element {
-  padding: 0.5rem 0rem 0.5rem 1rem;
+  padding: 0.5rem 0rem 0.5rem 0.5rem;
   font-size: 16px;
   color: black;
   width: 77%;
+  border-radius: 1px;
+  background-color: #f5f5f5;
 }
 
 .login-button {
   background-color: #00008b;
   color: rgb(255, 255, 255);
   text-align: center;
-  width: 50%;
+  width: 86%;
   display: block;
   padding: 0.5rem;
   font-size: 14px;
   font-family: Arial;
-  border-radius: 12px;
+  border-radius: 6px;
 }
 
 .center-button {
@@ -72,5 +73,13 @@ img {
   color: white;
   font-family: Arial;
   font-style: Italic;
-  padding-left: 40%;
+  padding-left: 9%;
+}
+
+.icon-div {
+  height: 67.5%;
+  padding: 0.5rem 0rem 0.5rem 0rem;
+  background: white;
+  border-radius: 1px;
+  border: 1px solid white;
 }
